--- a/index-cybe.html
+++ b/index-cybe.html
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <section class="error-body">
-	<video preload="auto" class="background" src="http://fastly.jsdelivr.net/gh/kesonoasis/static/static/vcd/err.mp4" autoplay muted loop></video>
+	<video preload="auto" class="background" src="./err.mp4" autoplay muted loop></video>
 	<div class="message">
 		<h1 t="404">404</h1>
 		<div class="bottom">
