--- a/index-cybe.html
+++ b/index-cybe.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Cyberpunk Error page</title>
-  <meta name="theme-color" content="#101119"><link rel="stylesheet" href="http://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-cyberpunk-normalize-5.0.0.min.css">
-<link rel="stylesheet" href="http://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-cyberpunk-style.css">
+  <meta name="theme-color" content="#101119"><link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-cyberpunk-normalize-5.0.0.min.css">
+<link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-cyberpunk-style.css">
 
 </head>
 <body>
@@ -20,7 +20,7 @@
 	</div>
 </section>
 <!-- partial -->
-  <script  src="http://fastly.jsdelivr.net/gh/kesonoasis/static/static/js/404-cyberpunk-script.js"></script>
+  <script  src="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/js/404-cyberpunk-script.js"></script>
 
 </body>
 </html>
