--- a/index-eyes.html
+++ b/index-eyes.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN" >
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="http://fastly.jsdelivr.net/gh/kesonoasis/static/static/favicon.svg" type="image/x-icon">
+  <link rel="icon" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/favicon.svg" type="image/x-icon">
   <title>404 page not found</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"><link rel="stylesheet" href="http://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-eye-style.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"><link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-eye-style.css">
 
 </head>
 <body>
