--- a/index-space.html
+++ b/index-space.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <title>404 page not found</title>
-  <link rel="icon" href="http://fastly.jsdelivr.net/gh/kesonoasis/static/static/favicon.svg" type="image/x-icon">
-  <link rel="stylesheet" href="http://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-space-style.css">
+  <link rel="icon" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/favicon.svg" type="image/x-icon">
+  <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-space-style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div id="svgContainer"></div>
 <!-- partial -->
-<script src='http://fastly.jsdelivr.net/gh/kesonoasis/static/static/js/404-space-gXrrYE.js'></script>
-<script src='http://fastly.jsdelivr.net/gh/kesonoasis/static/static/js/404-space-oeMMWo.js'></script>
-<script src='http://fastly.jsdelivr.net/gh/kesonoasis/static/static/js/404-space-script.js'></script>
+<script src='https://fastly.jsdelivr.net/gh/kesonoasis/static/static/js/404-space-gXrrYE.js'></script>
+<script src='https://fastly.jsdelivr.net/gh/kesonoasis/static/static/js/404-space-oeMMWo.js'></script>
+<script src='https://fastly.jsdelivr.net/gh/kesonoasis/static/static/js/404-space-script.js'></script>
 
 </body>
 </html>
