--- a/index-cybe.html
+++ b/index-cybe.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Cyberpunk Error page</title>
+  <link rel="icon" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/favicon.svg" type="image/x-icon">
   <meta name="theme-color" content="#101119"><link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-cyberpunk-normalize-5.0.0.min.css">
 <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-cyberpunk-style.css">
 
@@ -19,8 +20,6 @@
 		</div>
 	</div>
 </section>
-<!-- partial -->
-  <script  src="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/js/404-cyberpunk-script.js"></script>
 
 </body>
 </html>
