--- a/index-space.html
+++ b/index-space.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>404 page not found</title>
   <link rel="icon" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/favicon.svg" type="image/x-icon">
+  <link rel="icon" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/kesonoasis/static/static/css/404-space-style.css">
 
 </head>
